Application:        cryptoBot

Version:            v0.2.1
Last update on:     21-10-2017
Last updates by:    Anton (@Kolkos)

------------

Change log

Version:            v0.2.1
Date                21-10-2017
Changes:
  - Fixed formatting in status message;
  - Created a general method to create the portfolio status message text;
  - Created a general method to create the wallet status message text;

Version:            v0.2
Date                15-10-2017
Changes:
  - Added automatic request job:
    * The bot now request the status of the portfolio every hour;
    * The bot sends a status update to all registered groups ;
      somewhere between 12:00 and 13:00;
    * Outside this time window the bot just registers the result
      in the database;
  - Added the /version command (show this text);
  - Added a shortcut to request the portfolio since the last request
  - Added logging
  - Added deposit functionality
Fixes:
  - Edited regex to only trigger on the word bor (not as part of a word)
    
------------