@@ -1,16 +1,9 @@
 package cryptoBot;
 
-import java.util.ArrayList;
-import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.telegram.telegrambots.api.methods.send.SendMessage;
-import org.telegram.telegrambots.api.objects.replykeyboard.ReplyKeyboardMarkup;
-import org.telegram.telegrambots.api.objects.replykeyboard.ReplyKeyboardRemove;
-import org.telegram.telegrambots.api.objects.replykeyboard.buttons.KeyboardRow;
 
 public class TextMessageHandler extends CommandHandler {
 	
@@ -36,28 +29,10 @@ public class TextMessageHandler extends CommandHandler {
 	public void runTextMessageCommand() {
 		LOG.trace("Entered runTextMessageCommand()");
 		
-		// first check if the message contains the word 'bot'
-		Pattern patternBot = Pattern.compile("^(.*?)(\\bbot\\b)(.*)$");
-		Matcher matcher = patternBot.matcher(this.getIncomingMessage());
-		
-		// only do something when the word 'bot' is found
-		if (matcher.find()) {
-			LOG.trace("Incoming chat message matches {}.", patternBot);
-			// register this request
-			this.registerRequestInDatabase();
-			
-			// now send the bot options
-			this.sendBotOptions();
-			
-			// handling the bot command is complete
-			LOG.trace("finished runTextMessageCommand()");
-			return;
-		}
-		
 		// now check if the command starts with a /
 		// if so, check which method has to run
 		Pattern patternCommand = Pattern.compile("(?<command>^/\\w+)\\s*(?<rest>.*$)");
-		matcher = patternCommand.matcher(this.getIncomingMessage());
+		Matcher matcher = patternCommand.matcher(this.getIncomingMessage());
 		
 		if (matcher.find()) {
 			LOG.trace("Incoming chat message matches {}.", patternCommand);
@@ -82,6 +57,10 @@ public class TextMessageHandler extends CommandHandler {
 					break;
 				case "/status":
 					this.sendStringToChat("Ja ik ben er nog?");
+					break;
+				case "/bot":
+				case "/menu":
+					this.sendBotOptions();
 					break;
 //				case "/test":
 //					this.testReplyKeyboard();
